--- a/index.html
+++ b/index.html
@@ -120,158 +120,7 @@
     <br>
   </body>
     
-  <!---
-    Archive:
-
-     <br> Uh, Merry March?
-      <br> Back in January, I had some realizations on the realities of Creativity as a Product.
-      <br> Last month, (Febuary), I fell into a 'low energy' state, and barely got anything done. I spent a lot of time thinking about what I really want to do, and why I'm
-      trying to build this kind of Career.
-      <br> Survival is an Obligation that every living creature must contend with, typically, the things we do to stay alive are not enjoyable. For most creatures, eating is purely
-      a thing they do to deal with hunger. As humans, we're in a unique position to mitigate the Hastle of these obligations, as well as to find enjoyment in Non-Obligatory activities.
-      <br> When I left Service Masters last November, I set out to persue my own Creative Projects. Quickly though, I realized that nobody really cares about the things I 
-      want to make. (At least not enough to Support me Financially.) So I talked with my friends on the DawnSomewhere Discord, and they helped me to figure out how to 
-      sell my art skill as a product. (Specific shoutout to PBn) this turned out to be pretty effective, though it wasn't enough to support myself on, It was finally an Income
-      from a creative persuit.
-      <br> The added workload of doing commissions, creeped into the time I would spend on other projects, and I was no longer able to keep pace with my goals. This was disheartening,
-      but I resolved that income was the more important thing to persue currently. Creative Freedom could come once I've built a Supportive Community around myself. This was similar to
-      my line of thinking at work, "Once I build a robust retirement account, I'll have the freedom to work on the projects that bring me Meaningfulness."
-      <br> In Febuary, I thought about these kinds of things. And what I realy want, "What is my Best Life?"
-      <br> I want to make stories, and develope games, with as little hastle as possible.
-     <br>
-     <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
-     <br>
-     <br>
-     - Thank You,
-     <br> ArtisanBubblegum
-     <br> 5th March 2022</p>
-    <br>
-
-     <br> Happy New Year!
-      <br> I Quit my Job in November, and started Full Time Content Creation in December. I've never had the freedom to build my own schedule before,
-      and a Month into this, I can better reflect on what is working, and what is not working.
-      <br> I'm very happy with the progress we've made in Magic Elevator Quest. With the Freedom to schedule my time and energy,
-      I've been considerably more diligent with updates! I've also noticed there are a few people that consistantly reply to my posts. I find this to be Fulfilling and Manageable.
-      <br>
-      <br> The Weekly Devlogs, have also been a huge boon for me. Not only do they help my to stay diligent about working, they also help me to maintain direction,
-      plan out my workflow, and keep the scope of my work well managed. Though I don't have a following for my games, I'm making these games for myself, so they are their own reward.
-      <br>
-      <br> I have struggled to keep up with the Video Uploads. Though I am happy with the videos I've released, I can't help but feel like they could have been better.
-      The Monday Deadline, has made me feel more stressed out. and When I miss it, It feels very demotivating. For These reasons, I am not guaranteeing Video Updats on any set schedule.
-      <br>
-      <br> My work Schedule will remain the same, so I will continue to work on Videos/Animations, but I will now do so without the stress of a Deadline. This will help me to release better video content.
-     <br>
-     <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
-     <br>
-     <br>
-     - Thank You,
-     <br> ArtisanBubblegum
-     <br> 2nd January 2022</p>
-    <br>
-
-     <br> Happy New Year Eve!
-      <br> Today is the last day of 2021! Oh well.
-      <br> The new Update for EggVenture features all 5 of the Power Ups I plan to build levels around. You can read the <a href="https://bubblegumstudios.itch.io/the-big-eggventure/devlog/330489/week-3-elements" target="_blank">DevLog here.</a> 
-      <br> I have a Side Job I'll be busy with this weekend, but I should still have a Video to post on Monday. Maybe not the two videos I hoped to post.
-     <br>
-     <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
-     <br>
-     <br>
-     - Thank You,
-     <br> ArtisanBubblegum
-     <br> 31st December 2021</p>
-
-    <br> Merry Christmas!
-      <br> Today marks the proper start of Magic Elevator Quest: Chapter 3. I'll be drawing all the new updates in full color!
-      <br> I also released the current Outline for EggVenture. Everything I have planned, is in there. Though some areas are TBD, like the bosses and Items, I still feel
-      this outline gives a good representation of the core game I envision.
-      <br> I was able to impliment Wall Climbing, and have it adjust movement directions based on camera facing and angle of the wall the egg is on.
-      By next Friday, I'll have the remaining Four Boons implimented, and I'll get a basic Settings menu made that will allow you to toggle the boons on or off.
-      <br> As for Monday's Video, I'm not sure If I'm going to get something finished by then or not. I've been quite busy preparing for the Holidays..
-      <br> In the Worst Case, I'll have two Videos the following Monday to make up for it!
-     <br>
-     <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
-     <br>
-     <br>
-     - Thank You,
-     <br> ArtisanBubblegum
-     <br> 24th December 2021</p>
-
-     <br> Hello!
-      <br> Yet another Animatic out! I'm starting to get a feel for the flow of working on these, but it's still feels like a daunting task..
-      Next Monday will be another live action video, I haven't quite settled on an Idea yet, though..
-      <br> Again, the Source Files for the Bone Heist animatics will be released all in one big batch at the end.
-      <br> Friday, I'll be releasing a new Devlog outlining the basic flow I plan for EggVenture. Though this does mean I probably wont have a Game Update
-      ready to release, I'll have something substantial for the next DevLog after.
-     <br>
-     <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
-     <br>
-     <br>
-     - Thank You,
-     <br> ArtisanBubblegum
-     <br> 20th December 2021</p>
-
-    <br> Happy Friday!
-      <br> Today, is the newest update for EggVenture! You can checkout the <a href="https://bubblegumstudios.itch.io/the-big-eggventure/devlog/325704/week-1-tutorial" target="_blank">DevLog</a> to see what's new, or <a href="https://bubblegumstudios.itch.io/the-big-eggventure" target="_blank">Play the Game</a> directly.
-      <br> In other news, I plan on releaseing a new animatic on Monday. I got a lot of good feedback on the last one, so I've reduced my scope and worked slower on this one,
-      so that I can focus on things like keeping characters properly scaled, varying my type of shots, and making better use of notes.
-      <br> I would like to alternate between animations and live action videos, as the Live action videos take much less time to produce,
-      this will give me more time to work on animations, develop EggVenture, and keep up with Magic Elevator Quest updates! While I have plenty of material I want to animate,
-      I don't have many ideas for live action videos yet.
-     <br>
-     <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
-     <br>
-     <br>
-     - Thank You,
-     <br> ArtisanBubblegum
-     <br> 17th December 2021</p>
-
-    <br> Another Week, Another Video! I didn't have anything coordinated properly, so I ended up having to do all my recording Saturday and Sunday. 
-     Then stay up late to finish the editing. Even then, I had some extra work to finish this morning before I was satisfied with the Final Video.
-     As made Evident in the Video, I play Old School Runescape, my name is ArtisanHuman! I'm not on very often, buy I'm always happy to hangout or help,
-     just Ping ArtisanBubblegum on the <a href="https://discord.gg/V782kvCh9h" target="_blank">Discord Server!</a>
-     <br> I also play RPG MO, Path of Exile, Book of Travels, and Monster Hunter Rise, about as frequently as I do OSRS.
-     <br> This Friday, I'll have a basic Tutorial level built for EggVenture. And I hope to find a way to make the wall jumping feel more satisfying by then too.
-    <br>
-    <br> My Creations are made possible by your Support! <br>Even a Sub on Youtube, or Joining the Discord Server, makes a big impact!
-    <br>
-    <br>
-    - Thank You,
-    <br> ArtisanBubblegum
-    <br> 13th December 2021</p>
-
-    <br> It's been over a week since I quit my job to make content fulltime. I made a 3 minute animatic, and resumed Magic Elevator Quest.
-      I'll admit, I wasn't working as Diligently as I intended, but I've sorted out a more concrete work schedule. You can Expect 
-      2 to 5 Updates on Magic Elevator Quest every weekday. And I'll have a Devlog ready for "The Big EggVenture", on Friday the 10th.
-     <br>
-     <br> I should be able to comfortably fund this endevor through March 2022. By then, I may have to look into returning to the workforce.
-      This will of course put all active projects on Indefinite Hiatus.
-     <br>
-     <br> Any Support is greatly Apreciated! Even a Sub on Youtube, or Joining the Discord Server!
-     <br>
-     <br>
-     - Thank You,
-     <br> ArtisanBubblegum
-     <br> 6th December 2021</p>
-    <br>
-
-    26th November 2021:
-      <p id="archiveP"> As of December 6th 2021, the new Schedule will be put into place!
-       <br> <b>Comic Updates:</b> Monday - Friday
-       <br> <b>New Videos:</b> Every Monday
-       <br> <b>Dev Logs:</b> Every Friday
-      <br> This new schedule is possible because of the iminent end to my current employment. there is however another side effect of the end
-      of my current employment, a lack of income. Not to worry though, I have built up a small savings and plan to live off of this 
-      for as long as possible. Luckily, my lifestyle is exceptionaly CHEAP! at as little as $300/month, I can cover all my basic needs.
-      Of course, my savings wont last forever, in time I may have to put my work back on hiatus to seek gainful employment once again. If you enjoy 
-      the content that I produce, and would like to see it improve without interuption, you can support me through the links above! Be it a Sub on Youtube, a Follow on Itch.io,
-      or joining the Dawnsomewhere Discord. Building a community is the first step in continuing our creative works.
-      <br>
-      <br>
-      - Thank You,
-      <br> ArtisanBubblegum</p>
-      <br>
-  --->
+  <--- No More Archive --->
   
   <a href="https://docs.google.com/spreadsheets/d/1zw6q7MESRTBlL4qTPROcPNTCXEHY7pKUGD40a5AW51Q/edit?usp=sharing" target="_blank">RPGMO Fish Cooking Calculator</a>
   <br> <a href="https://docs.google.com/document/d/11adYWi_i4N6jWiewmhkagBnz2iLZAbNIndmGJwWJ1G4/edit?usp=sharing" target="_blank">DnD 5e Better Samurai Class</a>
