--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <a href="https://bubblegumstudios.itch.io/" target="_blank">Games</a> |
       <a href="https://questden.org/wiki/ArtisanBubblegum" target="_blank">Comics</a> |
       <a href="https://www.patreon.com/artisanbubblegum" target="_blank">Patreon</a> |
-      <a href="https://discord.gg/V782kvCh9h" target="_blank">Discord</a> |
+      <a href="https://discord.gg/hpcAA9cdy" target="_blank">Discord</a> |
     </h2>
     <p id="p1">
      <br> <b>WebComic: Magic Elevator Quest:</b> <a href="https://questden.org/kusaba/quest/res/1018225.html#1018225" target="_blank"> Page 78 </a>
