--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <br>
     <br>
     <div id="divCanvas">
+      <script src="/main.js"></script>
       <canvas id="renderCanvas"></canvas>
       <a href="https://docs.google.com/spreadsheets/d/1zw6q7MESRTBlL4qTPROcPNTCXEHY7pKUGD40a5AW51Q/edit?usp=sharing" target="_blank">RPGMO Fish Cooking Calculator</a>
       <br>
