--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/style.css">
     <title>World Famous Artisan</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <script src="/main.js"></script>
   </head>
   <body>
     <h1 id="header1"> World Famous Artisan </h1>
