--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="https://bubblegumstudios.itch.io/" target="_blank">Games</a> |
       <a href="https://questden.org/wiki/ArtisanBubblegum" target="_blank">Comics</a> |
       <a href="https://www.patreon.com/artisanbubblegum" target="_blank">Patreon</a> |
+      <a href="ArtisanMonstersAlpha.html" target="_blank">Artisan Monsters Alpha</a> |
       <a href="https://discord.gg/hpcAA9cdy" target="_blank">Discord</a> |
     </h2>
     
