--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -11,7 +11,18 @@
     </style>
 </head>
 <body>
-    <h1>Artisan Monsters</h1>
+    <h1 id="header1"> World Famous Artisan </h1>
+    <h2 id="readonly"> 
+      | <a href="/index.html">Home</a> |
+      <a href="https://m.youtube.com/channel/UCj1pLz_ytvqdNwIVP03ck9g" target="_blank">Videos</a> |
+      <a href="https://bubblegumstudios.itch.io/" target="_blank">Games</a> |
+      <a href="https://questden.org/wiki/ArtisanBubblegum" target="_blank">Comics</a> |
+      <a href="https://www.patreon.com/artisanbubblegum" target="_blank">Patreon</a> |
+      <a href="ArtisanMonstersAlpha.html" target="_blank">Artisan Monsters Alpha</a> |
+      <a href="https://discord.gg/hpcAA9cdy" target="_blank">Discord</a> |
+    </h2>
+    <br>
+    <h3>Artisan Monsters</h3>
     <p id="MapCanvas" style="white-space: pre;">
         MapCanvis.
     </p>
