--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Famous Artisan</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon-50403814.ico" />
+    <link rel="icon" type="image/x-icon" href="/assets/favicon-50403814.ico" /> 
     <style>
         td {
             text-align: center;
@@ -24,11 +24,11 @@
       <a href="https://discord.gg/hpcAA9cdy" target="_blank">Discord</a> |
     </h2>
     <br>
-    <h3>Artisan Monsters</h3>
+    <h3>Artisan Monsters: Alpha</h3>
     <p id="MapCanvas" style="white-space: pre;">
         MapCanvis.
     </p>
-    <table id="ArrowKeys">
+    <table id="ArrowKeys" style="scale: 1">
         <tr>
             <td></td>
             <td>
@@ -64,16 +64,11 @@
             </td>
         </tr>
     </table>
-    <!-- <table id="LetterKeys" align="right">
-        <tr>
-            <td>
-                <input type="button" value="A" onclick="stepFunction('A')">
-            </td>
-            <td>
-                <input type="button" value="B" onclick="stepFunction('B')">
-            </td>
-        </tr>
-    </table> -->
+    <br>
+    <p>
+        *This is a Work In Progress!* <br>
+        Currently proving 2D Map Generation and 2D Movement System.
+    </p>
     <script src="StartHere.js"></script>
 </body>
 </html>
