--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -79,6 +79,7 @@
     <p>
         *This is a Work In Progress!* <br>
         Currently proving 2D Map Generation and 2D Movement System.
+        Very basic Battle System. Click "A" to Attack, Click "B" to Defend.
     </p>
     <script src="StartHere.js"></script>
     <script src="Monster.js"></script>
