--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -81,7 +81,10 @@
         Click on directions to move player, ~20% of encountering a Giant Centepede.<br>
         Click A to Attack, Click B to Defend.<br>
         To-Do:<br>
-        1. develop remaining MVP Systems.
+        1. Expand cast of Monsters<br>
+        2. Improve Battle Command System<br>
+        3. Add Magic (Heal, Zap, Crag, etc.)<br>
+        4. Identify more To-Do Items.
     </p>
     <script src="StartHere.js"></script>
     <script src="Monsters.js"></script>
