--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -95,7 +95,7 @@
     </table>
     <p>
         *This is a Work In Progress!* <br>
-        Click on directions to move player, ~20% of encountering a Giant Centepede.<br>
+        Click on directions to move player,<br>
         Click A to Attack, Click B to Defend.<br>
         To-Do:<br>
         1. Improve Battle Command System<br>
