--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -48,7 +48,7 @@
                     <tr>
                         <td style="width: 100px;"></td>
                         <td style="width: 100px;">
-                            <input type="button" value="Up" onclick="stepFunction([0,-1])">
+                            <input type="button" value="Up" onclick="MapObj.update([0,-1])">
                         </td>
                         <td style="width: 100px;"></td>
 
@@ -59,11 +59,11 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="button" value="Left" onclick="stepFunction([-1,0])">
+                            <input type="button" value="Left" onclick="MapObj.update([-1,0])">
                         </td>
                         <td></td>
                         <td>
-                            <input type="button" value="Right" onclick="stepFunction([1,0])">
+                            <input type="button" value="Right" onclick="MapObj.update([1,0])">
                         </td>
                         
                         <td></td>
@@ -76,7 +76,7 @@
                     <tr>
                         <td></td>
                         <td>
-                            <input type="button" value="Down" onclick="stepFunction([0,1])">
+                            <input type="button" value="Down" onclick="MapObj.update([0,1])">
                         </td>
                         <td></td>
                         
@@ -112,9 +112,10 @@
         12. Expand Team Size to 2 Monsters.<br>
         13. More To-Do Items.<br>
     </p>
-    <script src="StartHere.js"></script>
-    <script src="Monsters.js"></script>
+    <script src="amaMain.js"></script>
+    <script src="amaMap.js"></script>
+    <script src="amaAllyMonsters.js"></script>
     <script src="WildMonsters.js"></script>
-    <script src="BattleSys.js"></script>
+    <script src="amaBattle.js"></script>
 </body>
 </html>
