--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -104,19 +104,15 @@
         Click on directions to move player,<br>
         Click A to Attack, Click B to Defend.<br>
         To-Do:<br>
-        1. Improve Battle Command System<br>
-        2. Add Magic (Heal, Zap, Crag, etc.)<br>
-        3. MP Regen<br>
-        4. Pause Menue<br>
-        5. Out of Battle Healing<br>
-        6. EXP and Leveling<br>
-        7. Develop a backend Map Builder<br>
-        8. Develop additional Maps<br>
-        9. Develop system to travel between maps<br>
-        10. Expand cast of Monsters, and limit certain monsters to certain maps.<br>
-        11. Develop a Town Map and a Healer.<br>
-        12. Expand Team Size to 2 Monsters.<br>
-        13. More To-Do Items.<br>
+        1. Add Magic/MP System<br>
+        3. Pause Menu, initially to access Heal Spell outside of battle.<br>
+        4. EXP and Leveling System<br>
+        5. Develop a backend Map Builder, make the map more interesting.<br>
+        6. Develop system to travel between maps<br>
+        7. Expand cast of Monsters.<br>
+        8. Develop a Town Map with friendly NPCs.<br>
+        9. Expand Team Size to 2 Monsters.<br>
+        10. Plan more To-Do Items.<br>
     </p>
     <script src="amaMap.js"></script>
     <script src="amaAllyMonsters.js"></script>
