--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -104,19 +104,20 @@
         Click on directions to move player,<br>
         Click A to Attack, Click B to Defend.<br>
         To-Do:<br>
-        1. Add Magic/MP System<br>
-        3. Pause Menu, initially to access Heal Spell outside of battle.<br>
-        4. EXP and Leveling System<br>
-        5. Develop a backend Map Builder, make the map more interesting.<br>
-        6. Develop system to travel between maps<br>
-        7. Expand cast of Monsters.<br>
-        8. Develop a Town Map with friendly NPCs.<br>
-        9. Expand Team Size to 2 Monsters.<br>
-        10. Plan more To-Do Items.<br>
+        1. Add More Spells<br>
+        2. Pause Menu, initially just to access Meditate outside of battle.<br>
+        3. EXP and Leveling System<br>
+        4. Develop a backend Map Builder, make the map more interesting.<br>
+        5. Develop system to travel between maps<br>
+        6. Expand cast of Monsters.<br>
+        7. Develop a Town Map with friendly NPCs.<br>
+        8. Expand Team Size to 2 Monsters.<br>
+        9. Plan more To-Do Items.<br>
     </p>
+    <script src="amaSpells.js"></script>
+    <script src="WildMonsters.js"></script>
     <script src="amaMap.js"></script>
     <script src="amaAllyMonsters.js"></script>
-    <script src="WildMonsters.js"></script>
     <script src="amaBattle.js"></script>
     <script src="amaMain.js"></script>
 </body>
