--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -119,6 +119,7 @@
     <script src="amaMap.js"></script>
     <script src="amaAllyMonsters.js"></script>
     <script src="amaBattle.js"></script>
+    <script src="amaPause.js"></script>
     <script src="amaMain.js"></script>
 </body>
 </html>
