--- a/performative-media.html
+++ b/performative-media.html
@@ -18,7 +18,7 @@
 
     <h3>Discord</h3>
     I don't have a discord server of my own, but I do owe a lot of my creative drive to DawnSomewhere.<br>
-    Feel free to join the <a href="https://discord.gg/hpcAA9cdy" target="_blank">DawnSomewhere Discord</a>.<br>
+    Feel free to join the <a href="https://discord.gg/4qw5qYBrYy" target="_blank">DawnSomewhere Discord</a>.<br>
     Though many of the original creative types have moved on, I still feel like there's potential in this community.<br>    
     <h3>Twitch</h3>
     This section is a Placeholder for when I'm ready to start streaming.<br>
