--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -26,7 +26,7 @@
     </h2>
     <br>
     <h3>Artisan Monsters: Alpha</h3>
-    <table id="PrimaryTable" style="width: 700px;">
+    <table id="PrimaryTable" style="width: 700px; margin-left: auto; margin-right: auto;">
         <tr>
             <td>
                 <p id="MapCanvas" style="white-space: pre; width: 350px;">
