--- a/index.html
+++ b/index.html
@@ -27,13 +27,6 @@
     <p style="align-items: center;">
       <h3>2024 Roadmap:</h3>
       <img src="/Roadmap-2024.png" width="70%"></img><br>
-      
-      <b>March:</b>
-      <div style="text-align: center;">
-        <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
-          I will be attending <span style="color: darkgoldenrod">BabsCon</span> and co-hosting (read as: Crashing) a Panel with DawnSomewhere (A.K.A. FiMFlamFilosophy).<br>
-        </div>
-      </div>
 
       <b>April:</b>
       <div style="text-align: center;">
@@ -45,6 +38,13 @@
         </div>
       </div>
 
+      <b>May:</b>
+      <div style="text-align: center;">
+        <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
+          I will continue to support the <span style="color:green">VidSomewhere</span>.<br>
+          With a Script in hand, I'll be able to move into blocking out pages for <span style="color: blue">Sword Wizard: Act 1</span>.<br>
+        </div>
+      </div>
 
       <br>
       <h3>News:</h3>
