--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <b>May:</b>
       <div style="text-align: center;">
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
-          I will continue to support the <span style="color:green">VidSomewhere</span>.<br>
-          With a Script in hand, I'll be able to move into blocking out pages for <span style="color: blue">Sword Wizard: Act 1</span>.<br>
+          The <span style="color:green">VidSomewhere</span> will continue to be my primary focus through this month.<br>
+          With a Script in hand, I'll be spending the remainder of my free time blocking out pages for <span style="color: blue">Sword Wizard: Act 1</span>.<br>
         </div>
       </div>
 
