--- a/index.html
+++ b/index.html
@@ -28,22 +28,25 @@
       <h3>2024 Roadmap:</h3>
       <img src="/Roadmap-2024.png" width="70%"></img><br>
 
-      <b>April:</b>
-      <div style="text-align: center;">
-        <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
-          The Primary focus for April will be planning out the <span style="color:green">2024 VidSomewhere</span> Video Competition! We will be releasing an Announcement Video by the End of the April.<br>
-          <p>
-          Secondarily, I will be writing out a full script for <span style="color: blue">Sword Wizard: Act 1</span>. Keeping pace with the expected release of July.<br>
-          </p>
-        </div>
-      </div>
-
       <b>May:</b>
       <div style="text-align: center;">
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
-          The <span style="color:green">VidSomewhere</span> will continue to be my primary focus through this month.<br>
+          The <span style="color:green">VidSomewhere</span> announcement was postponed, in order to better align with our schedules. Luckily, this rescheduling has given me more time to improve upon the Prize Crown.<br>
           <p>
-          With a Script in hand, I'll be spending the remainder of my free time blocking out pages for <span style="color: blue">Sword Wizard: Act 1</span>.<br>
+          I was not as productive as I had planned, waylaid by sickness and recovery. I did not get the script for <span style="color: blue">Sword Wizard: Act 1</span> written yet.<br>
+          </p>
+        </div>
+      </div>
+    
+      <b>June:</b>
+      <div style="text-align: center;">
+        <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
+          My primary focus this month is the <span style="color: blue">Sword Wizard: Act 1</span> script, and subequently all comic page blocking.<br>
+          <p>
+          As for the <span style="color:green">VidSomewhere</span>, we're planning to have an announcment ready by the end of this month.<br>
+          </p>
+          <p>
+          I have a considerable amount of work to do this month in order to catch up, wish me time to work, and disipline to spend that time working.<br>
           </p>
         </div>
       </div>
