--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -26,6 +26,7 @@
     </h2>
     <br>
     <h3>Artisan Monsters: Alpha</h3>
+    <h4>Monster Battler Game</h4>
     <table id="PrimaryTable" style="width: 75%; margin-left: auto; margin-right: auto;">
         <tr>
             <td>
