--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -27,7 +27,7 @@
     <br>
     <h3>Artisan Monsters: Alpha</h3>
     <h4>Monster Battler Game</h4>
-    <table id="PrimaryTable" style="width: 75%; margin-left: auto; margin-right: auto;">
+    <table id="PrimaryTable" style="width: auto; margin-left: auto; margin-right: auto;">
         <tr>
             <td>
                 <p id="MapCanvas" style="white-space: pre; width: auto;">
@@ -35,7 +35,7 @@
                 </p>
             </td>
             <td>
-                <p id="MonCanvas" style="white-space: pre; text-align: left; width: 350px;">
+                <p id="MonCanvas" style="white-space: pre; text-align: left; width: auto;">
                     MonCavis.
                 </p>
             </td>
