--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -102,14 +102,14 @@
         Click on directions to move player,<br>
         Click A to Pause/Select, Click B to Cancel.<br>
         To-Do:<br>
-        1. Add More Spells<br>
-        2. EXP and Leveling System<br>
-        3. Develop a backend Map Builder, make the map more interesting.<br>
-        4. Develop system to travel between maps<br>
-        5. Expand cast of Monsters.<br>
-        6. Develop a Town Map with friendly NPCs.<br>
-        7. Expand Team Size to 2 Monsters.<br>
-        8. Plan more To-Do Items.<br>
+        1. Add More Spells, and a way to learn better/new spells<br>
+        2. Improve EXP and Leveling System, expand Levels to Wild Monsters<br>
+        3. Let the Player select starting Monster.<br>
+        4. Develop a backend Map Builder, make the map more interesting.<br>
+        5. Develop system to travel between maps<br>
+        6. Expand cast of Monsters.<br>
+        7. Develop a Town Map with friendly NPCs.<br>
+        8. Expand Team Size to 2 Monsters.<br>
     </p>
     <script src="amaSpells.js"></script>
     <script src="WildMonsters.js"></script>
