--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -101,6 +101,7 @@
         *This is a Work In Progress!* <br>
         Click on directions to move player,<br>
         Click A to Pause/Select, Click B to Cancel.<br>
+        <a href="/ArtisanMonstersManual.html">AMA Manual</a><br>
         To-Do:<br>
         1. Add More Spells, and a way to learn better/new spells<br>
         2. Improve EXP and Leveling System, expand Levels to Wild Monsters<br>
