--- a/ArtisanMonstersManual.html
+++ b/ArtisanMonstersManual.html
@@ -9,6 +9,8 @@
     <style>
         table {
             border: 1px solid red;
+            margin-left: auto;
+            margin-right: auto;
         }
         td {
             text-align: center;
