--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -103,8 +103,8 @@
         Click A to Pause/Select, Click B to Cancel.<br>
         <a href="/ArtisanMonstersManual.html">AMA Manual</a><br>
         To-Do:<br>
-        1. Add More Spells, and a way to learn better/new spells<br>
-        2. Improve EXP and Leveling System, expand Levels to Wild Monsters<br>
+        1. Develop basic Magic Unlock/Learning System.<br>
+        2. Develop Magic Contamination System. <br>
         3. Let the Player select starting Monster.<br>
         4. Develop a backend Map Builder, make the map more interesting.<br>
         5. Develop system to travel between maps<br>
@@ -113,9 +113,11 @@
         8. Expand Team Size to 2 Monsters.<br>
     </p>
     <script src="amaSpells.js"></script>
+    <script src="amaMonTactics.js"></script>
     <script src="WildMonsters.js"></script>
     <script src="amaMap.js"></script>
     <script src="amaAllyMonsters.js"></script>
+    <script src="amaEnemyMonsters.js"></script>
     <script src="amaBattle.js"></script>
     <script src="amaPause.js"></script>
     <script src="amaMain.js"></script>
