--- a/ArtisanMonstersManual.html
+++ b/ArtisanMonstersManual.html
@@ -112,53 +112,53 @@
         <b>Giant Rat</b> (Beast)<br>
         A dog sized rat.<br>
         This bulky creature is surprisingly resilient and packs a hefty wallop, though it is slow to act.<br>
-        Spells: Meditation, Earth Bolt<br>
+        Starting Spells: Meditation, Earth Bolt<br>
         <br>
 
         <b>Mud Slipper</b> (Aquatic)<br>
         This small fish has the surprising ability to live on land for short periods of time, thanks to a special organ that can store dissolved oxygen.<br>
         What they lack in power, they make up in Smarts and Agility.<br>
-        Spells: Water Bolt<br>  
+        Starting Spells: Water Bolt<br>  
         <br>
 
         <b>Giant Centipede</b> (Insect)<br>
         This man sized bug with a hundred legs, is well rounded with physical might and magical force.<br>
         Though it's chitin is a bit flimsy, it is very territorial.<br>
-        Spells: Void Bolt,<br>
+        Starting Spells: Void Bolt,<br>
         <br>
 
         <b>Bed Biter</b> (Insect)<br>
         This insect is about the size of a small cat, and can be as feisty too when backed into a corner.<br>
         It has the potential for strong magics, but doesn't know any spells naturally.<br>
-        Spells:<br>
+        Starting Spells:<br>
         <br>
 
         <b>Error Ant</b> (Insect)<br>
         Legends say that when an army ant is separated from it's colony, if it can survive eight years, it will grow to the size of a baby bear and gain the intelligence of small human.<br>
         In reality, the Error Ant was an unfortunate result of a magical experiment turned invasive species.<br>
         Despite their magical origin, they don't possess any spells, but instead have an exceptional strength and a deadly aggression.<br>
-        Spells:<br>
+        Starting Spells:<br>
         <br>
 
         <b>Carnivorous Canary</b> (Avian)<br>
         Despite it's name, the Carniverous Canary is not actually a Canary.<br>
         Thanks to convergent evolution, this bird has incidentally evolved to appear almost indistinguishable from canaries.<br>
         These teritorial birds are exceptionally agile, and have a bespoke magic ability to weaponize air. But their frail form means that, <i>if you can hit them</i>, they crumple easily.<br>
-        Spells: Air Bolt<br>
+        Starting Spells: Air Bolt<br>
         <br>
 
         <b>Magic Sword</b> (Material)<br>
         It is believed that the emotions of a person are imbued into the tools they use.<br>
         Magic Swords are typically thought to be brought to life from an ancient warrior's angry or regret.<br>
         Though most magic swords are actually carving knives, parring knives, and other such tools.<br>
-        Spells:<br>
+        Starting Spells:<br>
         <br>
 
         <b>Orange Ooze</b> (Slime)<br>
         This glob of orange-yellow ooze is actually alive, but lacks an sign of conscious thought.<br>
         Despite it's mindlessness, it still manages to infuse it's Citric Acid with Arcane Fire, flinging off-brand fire bolts at any detected stimuli.<br>
         This ooze is often used as an resource for supplement manufacturing, and like most slimes is also studied for it's inexplicable magic ability.<br>
-        Spells: Fire Bolt<br>
+        Starting Spells: Fire Bolt<br>
         <br>
         
         
