--- a/ArtisanMonstersManual.html
+++ b/ArtisanMonstersManual.html
@@ -160,7 +160,7 @@
         <br>
         The net change to Contamination was -20 this time, but 5 more of this monsters contamination can never again be subjugated.<br>
         If a monster has a really high contamination that makes it hard to manage, converting it into Void Contamination can give you more breathing room, but doing this will inevitably kill your monster.<br>
-        Good Management of Magic Contamination is the approach, and will prolong the life of your monster.<br>
+        Good Management of Magic Contamination is the best approach, and will prolong the life of your monster.<br>
     </p>
 
     <h5 style="font-size: 150%;">Monsters</h5>
